--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>abhay-sachan-portfolio-showcase</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Abhay's Portfolio</title>
+    <meta name="description" content="Competitive Programmer and Full Stack Developer" />
+    <meta name="author" content="Abhay Sachan" />
 
-    <meta property="og:title" content="abhay-sachan-portfolio-showcase" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph Tags for Link Preview -->
+    <meta property="og:title" content="Abhay's Portfolio" />
+    <meta property="og:description" content="Competitive Programmer, DSA Expert and Full Stack Developer." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://abhaysachan.netlify.app/" />
+    <meta property="og:image" content="https://abhaysachan.netlify.app/abhay-opengraph.png" />
 
+    <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Abhay's Portfolio" />
+    <meta name="twitter:description" content="Competitive Programmer, DSA Expert and Full Stack Developer." />
+    <meta name="twitter:image" content="https://abhaysachan.netlify.app/abhay-opengraph.png" />
   </head>
 
   <body>
