--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <meta name="description" content="Competitive Programmer and Full Stack Developer" />
     <meta name="author" content="Abhay Sachan" />
 
-    <!-- Open Graph Tags for Link Preview -->
+   <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Abhay's Portfolio" />
     <meta property="og:description" content="Competitive Programmer, DSA Expert and Full Stack Developer." />
-    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://abhaysachan.netlify.app/abhay.png" />
     <meta property="og:url" content="https://abhaysachan.netlify.app/" />
-    <meta property="og:image" content="https://abhaysachan.netlify.app/abhay-opengraph.png" />
+    <meta property="og:type" content="website" />
 
-    <!-- Twitter Card Tags -->
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Abhay's Portfolio" />
     <meta name="twitter:description" content="Competitive Programmer, DSA Expert and Full Stack Developer." />
-    <meta name="twitter:image" content="https://abhaysachan.netlify.app/abhay-opengraph.png" />
+    <meta name="twitter:image" content="https://abhaysachan.netlify.app/abhay.png" />
+
   </head>
 
   <body>
